syntax = "proto3";

package task;

// import "google/protobuf/timestamp.proto";

option go_package = "github.com/cloudnativedaysjp/cnd-handson-app/backend/task/proto;taskpb";

message Task {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    string start_time = 5;
    string end_time = 6;
    string column_id = 7; 
    string assignee_id = 8;
}
